deprecated/selfhost-v1/kubernetes-v1/deprecated/n8n/n8n-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: n8n-main
  name: n8n-main-service
  namespace: n8n
spec:
  type: ClusterIP
  ports:
    - name: "5678"
      port: 5678
      targetPort: 5678
      protocol: TCP
  selector:
    app: n8n-main
