deprecated/selfhost-v1/kubernetes-v1/deprecated/n8n/n8n-webhook-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n-webhook-service
  namespace: n8n
  labels:
    app: n8n-webhook
spec:
  type: ClusterIP
  ports:
  - name: "5678"
    port: 5678
    targetPort: 5678
    protocol: TCP
  selector:
    app: n8n-webhook
