deprecated/selfhost-v1/kubernetes-v1/deprecated/n8n/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: n8n
  labels:
    app: redis
spec:
  ports:
  - port: 6379
    targetPort: 6379
  selector:
    app: redis
